# rust

./: .gitignore
.github/workflows/: rust.yml
angular/cursesjs/: package-lock.json  package.json
angular/progression/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
cpp/: make.bat  makefile  makefile.linux
cpp/.metadata/: version.ini
cpp/PuzzleGame/: .PuzzleGame.hpp.swp  .design.cpp.swp  PuzzleGame.cpp  PuzzleGame.hpp  Test.cpp  Test.h  design.cpp  design0.cpp  design1.vcxproj  design1.vcxproj.filters  expect.h  main  makefile
cpp/TouchGFX/: AnimatedImages.touchgfx
cpp/am2/: Test.cpp  Test.h  design.cpp  design1.cpp  design1.vcxproj  design1.vcxproj.filters  makefile  manager.cpp  manager.h  managerUI.cpp  managerUI.h
cpp/am2_5/: make2.bat  managerUI.cpp  managerUI.h  text.txt
cpp/am3/: Test.cpp  expect.h  main.cpp  manager.cpp  manager.h  managerUI.cpp
cpp/grpctest/: Makefile  client.cpp  grpctest.vcxproj  grpctest.vcxproj.filters  mathtest.grpc.pb.cc  mathtest.pb.cc  mathtest.pb.cpp  mathtest.pb.h  (+2 more)
cpp2/: chart.c  data.txt  make2.bat  makefile
cpp2/qtut/mcuproject/: CMakeLists.txt  led.h  led_stm32f769.cpp  led_wrapper.h  main.qml
edutils/: model.json
edutils/bulktr/: Cargo.toml
edutils/bulktr/src/: filebrowser.rs  main.rs
pytt/: hi.py
rmenu/: Cargo.toml  make.sh
rmenu/src/: edit.rs  resel.rs
rspuzzle/: Cargo.toml
schema/: Download  Visual Studio Community.url  POS UI classes.drawio  POS activity diagram old.drawio  POS activity diagram.drawio  POS classes.drawio  POS classex.drawio  POS seq2.drawio  POS use case.drawio  POS usecase.drawio  POS usecase2.drawio  POS-UI.drawio  POS_classes_2021_13.drawio  Point2d class.drawio  Puzzle - class diagram.drawio  RPAGRating(InternationalYear1)_J1E-SD-G12,J1E-SD-G13G14.csv  RPAGRating(InternationalYear1)_J1E-SD-G12,J1E-SD-G13G14.xlsx  Software Design RoadMap.drawio  Tictactoe activity.drawio  Tictactoe activity2.drawio  Tictactoe-usecase.drawio  Untitled Diagram.drawio  Visual Studio 2019.lnk  address book.drawio  algorithm.drawio  animals.drawio  area_sequence.drawio  arithmetic.drawio  arithmetic2.drawio  arithmetic3.drawio  arr_search.drawio  auth_relationships.drawio  authentication_registration.drawio  authusecasetemp.drawio  bcard.drawio  bicycle.drawio  binary_class  brightspace_usecase  cadd.drawio  calc_classes.drawio  calcwire.drawio  (+54 more)
tutorial/: Cargo.toml
tutorial/src/: conditional.rs  datatypes.rs  loops.rs  main.rs  math.rs  output.rs  strings.rs  tutorial.txt
(+1515 files in other folders)
