[package]
name = "rmenu"
version = "0.1.0"
authors = ["John Alamina <john.alamina@netsells.co.uk>"]
edition = "2018"

default-run = "cursive"

# [dependencies]
# cursive = "0.15"
[dependencies.cursive]
version = "0.12"
default-features = false
features = ["crossterm-backend"]
# features = ["pancurses-backend"]

# Here's an example of a TOML "array of tables" section, in this case specifying
# a binary target name and path.
[[bin]]
name = "cursive"
path = "src/edit.rs"
#cargo run -v --no-default-features --features crossterm-backend --example select