[package]
name = "tutorial"
version = "0.1.0"
authors = ["John Alamina <john.alamina@netsells.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Here's an example of a TOML "array of tables" section, in this case specifying
# a binary target name and path.
[[bin]]
name = "main"
path = "src/main.rs"
